updated text and supplementary figures.

--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -473,6 +473,8 @@ The populations that tend to have the most individuals with low $Q$ also tend to
 \centering
 \includegraphics[width=13cm,keepaspectratio]{../Figures/Mafessoni_MutSpect.jpg}
 \caption{ \textbf{A} Comparison of the p-values from the association to unusual LD from \cite{mafessoni2018turning} and the p-values from the GCAT association test to quality metrics.
+There are a total of 40,266 variants in this plot with only 1328 ( 3\% ) are statistically significant in both test.
+There are 23172  variants ( 58\% ) that are $Q$-associated but not LD-associated and 15766 ( 39\% ) that are LD-associated but not $Q$-associated.
 \textbf{B} Mutation spectrum of the variants significantly associated to unusual LD from \cite{mafessoni2018turning}. }  
 \label{Mafessoni_MutSpect}
 \end{figure}
